les pop-ups du tableau d'utilisation des ressources sont maintenant visibles quelque soit le navigateur et la position de la souris dans le tableau. Ce commit devrait régler l'issue #71

--- a/Web/styles/genymobile-2012/reporting_ressources_view.css
+++ b/Web/styles/genymobile-2012/reporting_ressources_view.css
@@ -72,9 +72,9 @@ a.bulle:hover span {
 	color:white;
 	text-shadow:none;
 	display: block;
-	position: absolute;
-	top: -10px;
-	left: 40px;
+	position: fixed;
+	bottom: 25px;
+	right: 25px;
 	text-align:justify;
 	font-size:12px;
 	font-weight:normal;
